# MsPiggit

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  app.pri  index.html  mspiggit.pro
core/: CMakeLists.txt  core.pro  main.cpp  metatypes.h
core/model/: commitmodel.cpp  commitmodel.h  headeritem.cpp  headeritem.h  modelaccess.cpp  modelaccess.h  msptypeinfo.cpp  msptypeinfo.h  referencemodel.cpp  referencemodel.h  repomodel.cpp  repomodel.h  submodulemodel.cpp  submodulemodel.h  treebuilder.cpp  treebuilder.h  treeitem.cpp  treeitem.h
core/resources/: MsPiggitResources.qrc
core/resources/icons/: MsPiggit.icns
core/resources/styles/: main.css
core/ui/: graphdelegate.cpp  graphdelegate.h  refdelegate.cpp  refdelegate.h  repodelegate.cpp  repodelegate.h  repoview.cpp  repoview.h  repoview.ui  repowindow.cpp  repowindow.h  repowindow.ui
libs/: libs.pro
libs/gitwrap/: GitWrap.pro  GitWrap_global.h  abstractrepo.cpp  abstractrepo.h  gitwrap.cpp  gitwrap.h  libs.pro  repocommander.cpp  repocommander.h
libs/qtuiextensions/: CMakeLists.txt  csplashscreen.cpp  csplashscreen.h  qtuiextensions.pro
license/: CODE_HEADER
